@@ -5,6 +5,7 @@
   * add [distance metrics](../examples/distance.py) example:
     dice, hamming, jaccard, kulczynski1, rogerstanimoto, russellrao,
     sokalmichener, sokalsneath, yule
+  * add example [sparse bitarray](../examples/sparse.py) implementation
 
 
 2023-01-01   2.6.2:
